@@ -1,3 +1,12 @@
+2011-12-21 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/GNUmakefile:
+	* Source/CFBitVector.c:
+	* Source/CFBinaryHeap.c:
+	* Headers/CoreFoundation/CFBinaryHeap.h:
+	* Headers/CoreFoundation/CFBitVector.h: Added skeleton for
+	CFBinaryHeap and CFBitVector.
+
 2011-12-19 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Headers/CoreFoundation/CFURL.h: Populate with definitions up 
